Thaala/assets/css/style.css
/* ... */
.subscribe-widget .social-nav {
  margin-top: 32px;
}

.subscribe-widget .social-nav a {
  display: inline-block;
  text-align: center;
  width: 36px;
  height: 36px;
  line-height: 36px;
  background-color: #fff;
  color: #ddd;
  background-color: #444;
  border-top-right-radius: 10px;
  border-bottom-left-radius: 10px;
  margin-right: 10px;
}

.subscribe-widget .social-nav a i {
  color: #ddd;
}

.subscribe-widget .social-nav a:hover {
  background-color: #ee1515;
}

/*-----------------------------------
    1 - Foot Note
------------------------------------*/
.foot-note {
  padding: 35px 0;
  background-color: #ee1515;
  color: #26264b;
}

.foot-note a {
  color: #26264b;
}

.foot-note a:last-child {
  margin-left: 30px;
}

.foot-note a.fh5-link {
  margin-left: 0;
}
.featured-big {
  margin-right: -180px;
}
#dplogo{
  width: 48%;
  height: auto;
  margin-left: 89px;
  margin-top: 13px;
}
#leologo{
  width: 52%;
  height: auto;
  margin-left: -46px;
  margin-top: -94px
}
.pricesDiv {
  margin-left: 342px;
}
#txt1{
color: #0e0520;
  font-size: 22px;
}
#txt2{
  color: #0e0520;
  font-size: 24px;

}
#txt3{
  color: #0e0520;
  font-size: 24px;

}
.col-md-6.aos-init.aos-animate {

  padding-left: 50px;

}

